k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: greeting-api-namespace
  labels:
    name: greeting-api
